user tags in people with user_tag_facet, loading animation for subreddits

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -10,7 +10,7 @@ template(name='nav')
                 i.large.user.outline.grey.icon
             a.icon.item.clear_tags.goto_reddit(href='/reddit' class="{{isActivePath regex='reddit'}}")
                 i.large.search.grey.icon
-            a.icon.item.clear_tags.users(href='/subreddits' class="{{isActivePath regex='subreddits'}}")
+            a.icon.item.clear_tags.subreddits(href='/subreddits' class="{{isActivePath regex='subreddits'}}")
                 i.large.reddit.grey.icon
             a.icon.item.clear_tags.stackexchange.clear_tags(href='/stack' class="{{isActivePath '/stack'}}")
                 i.large.stack.exchange.grey.icon
