subreddit doc template link updates, add access_date and location_butotn dummys to user card

--- a/client/client.jade
+++ b/client/client.jade
@@ -36,5 +36,5 @@ head
 template(name='layout')
     +nav
     .ui.bottom.attached.pushable.segment
-        #main_area.global_container.pusher(class=currentUser.invert_class)
+        #main_area.pusher(class=currentUser.invert_class)
             +yield
