--- a/client/stack.jade
+++ b/client/stack.jade
@@ -1,5 +1,5 @@
 template(name='stack')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .row
             .sixteen.wide.center.aligned.column
                 // .ui.inline.header 
