--- a/client/s.css
+++ b/client/s.css
@@ -520,8 +520,8 @@ a.title, #title {
 }
 
 input {
-    margin: 5px !important;
-    border-radius: 10px !important; 
+    /*margin: 5px !important;*/
+    /*border-radius: 10px !important; */
 }
 
 ::-webkit-scrollbar {
