--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -1,6 +1,6 @@
 template(name='site_users')
     with current_site
-        .ui.stackable.padded.grid
+        .ui.stackable.grid
             .row
                 .four.wide.column
                     // a.ui.circular.icon.button(href='/')
@@ -23,7 +23,7 @@ template(name='site_users')
                             // .item site_url: #{site_url}
                     // a(href="https://www.twitter.com/#{twitter_account}" target='_window' title=twitter_account)
                     //     i.large.link.twitter.icon
-                    a.ui.large.basic.icon.button(href=site_url)
+                    a.ui.large.basic.icon.circular.button(href=site_url)
                         // |#{site_url}
                         i.external.icon
                     if in_dev
@@ -70,7 +70,9 @@ template(name='site_users')
                             i.user.link.icon
                         input.search_users(type='text' placeholder='username' val="{{session 'user_query'}}")
                     .ui.left.icon.input(class="{{#if current_location_query}} focus {{/if}}")
-                        if current_location_query
+                        if skv_is 'ready' false
+                            i.loading.yin.yang.icon
+                        else if current_location_query
                             i.remove.link.icon.clear_location
                         else
                             i.marker.link.icon.clear_location
