say_this css and add class to most things on profile, remove padded class

--- a/client/people.jade
+++ b/client/people.jade
@@ -1,5 +1,5 @@
 template(name='people')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .four.wide.column.scrolling
             // i.big.user.outline.icon
             // #cloud.ui.center.aligned.fluid.segment
